issue #33 Restore the Slow Receive warning and info printing memory utilization